force-app/main/default/objects/AI_Voice_Configuration__c/AI_Voice_Configuration__c.object-meta.xml
<CustomObject>
    <label>Voice Configuration</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Configuration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>