force-app/main/default/objects/AI_Voice_Configuration__c/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Model (Processing)</label>
    <referenceTo>AI_Connection__c</referenceTo>
    <relationshipLabel>Voice Configurations</relationshipLabel>
    <relationshipName>Voice_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>