force-app/main/default/objects/AI_Voice_Configuration__c/fields/AI_Model_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_File_Upload__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Model (File Upload)</label>
    <referenceTo>AI_Connection__c</referenceTo>
    <relationshipLabel>Voice Configurations (AI Model (File Upload))</relationshipLabel>
    <relationshipName>Voice_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>