force-app/main/default/objects/AI_Voice_Configuration__c/fields/AI_Model_Polling__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Polling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Model (Polling)</label>
    <referenceTo>AI_Connection__c</referenceTo>
    <relationshipLabel>Voice Configurations (AI Model (Polling))</relationshipLabel>
    <relationshipName>Voice_Configurations2</relationshipName>
    <type>Lookup</type>
</CustomField>