force-app/main/default/objects/AI_Voice_Configuration__c/fields/Maximum_Polling_Counter__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Polling_Counter__c</fullName>
    <label>Maximum Polling Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>