force-app/main/default/objects/AI_Voice_Configuration__c/fields/Polling_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Polling_Timeframe__c</fullName>
    <label>Polling Timeframe (in mins)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>